// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`indented.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- 123
- 456
- 789
  <!-- prettier-ignore -->
  - This is a long long
    long long long long
    long long paragraph.

=====================================output=====================================
- 123
- 456
- 789
  <!-- prettier-ignore -->
  - This is a long long
    long long long long
    long long paragraph.

================================================================================
`;

exports[`issue-17399.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
<div>this is necessary</div>
<!-- prettier-ignore -->
<pre>

the blank line above is also necessary
  indent this line please
  and don't invent a blank after my code
  in fact, don't reformat preformatted text at all
</pre>

<div>container</div>
<!-- prettier-ignore -->
<pre class="highlight">

  preserved indentation
</pre>

Normal markdown paragraph after ignored preformatted blocks.

=====================================output=====================================
<div>this is necessary</div>
<!-- prettier-ignore -->
<pre>

the blank line above is also necessary
  indent this line please
  and don't invent a blank after my code
  in fact, don't reformat preformatted text at all
</pre>

<div>container</div>
<!-- prettier-ignore -->
<pre class="highlight">

  preserved indentation
</pre>

Normal markdown paragraph after ignored preformatted blocks.

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- prettier-ignore -->
This is a long long long long long long long long long long long long long long long paragraph.

=====================================output=====================================
<!-- prettier-ignore -->
This is a long long long long long long long long long long long long long long long paragraph.

================================================================================
`;

exports[`top-level-range.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- prettier-ignore-start -->
<!-- some tool start (this should be ignored) -->

| some | table |
| - | - |
| 1 | a |
| 2 | b |

<!-- some tool end -->
<!-- prettier-ignore-end -->

> <!-- prettier-ignore-start -->
> <!-- some tool start (this shouldn't be ignored) -->
>
> | some | table |
> | - | - |
> | 1 | a |
> | 2 | b |
>
> <!-- some tool end -->
> <!-- prettier-ignore-end -->

=====================================output=====================================
<!-- prettier-ignore-start -->
<!-- some tool start (this should be ignored) -->

| some | table |
| - | - |
| 1 | a |
| 2 | b |

<!-- some tool end -->
<!-- prettier-ignore-end -->

> <!-- prettier-ignore-start -->
> <!-- some tool start (this shouldn't be ignored) -->
>
> | some | table |
> | ---- | ----- |
> | 1    | a     |
> | 2    | b     |
>
> <!-- some tool end -->
> <!-- prettier-ignore-end -->

================================================================================
`;
